# strunc

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: create_version_tag.yaml
strunc/: __init__.py  formatting.py  grouping.py  pfloat.py  pfloat_format.py  pformat_float.py  prefix_float.py  strunc.py  strunc2.py  test.py  unc_format.py  val_unc_formatting.py  val_unc_formatting_2.py
tests/: test.py
