[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "strunc"
authors = [
    {name = "Justin Gerber", email = "justin.gerber48@gmail.com"},
]
description = "Format pairs of value/uncertainty floats into scientific notations"
readme = "README.md"
dynamic = ["version"]

[project.optional-dependencies]
test = ["uncertainties"]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[tool.setuptools.dynamic]
version = {attr = "strunc.__version__"}
