[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "strunc"
authors = [
    {name = "Justin Gerber", email = "justin.gerber48@gmail.com"},
]
description = "Format value/uncertainty pairs into scientific notations"
readme = "README.md"
dynamic = ["version"]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[tool.setuptools.dynamic]
version = {attr = "strunc.__version__"}
