[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strunc"
authors = [
    {name = "Justin Gerber", email="justin.gerber48@gmail.com"}
]
description = "A package for formatting numbers into scientific formatted strings."
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "sciform.__version__"}
readme = {file = "README.md"}
